--- a/css/style.css
+++ b/css/style.css
@@ -44,6 +44,24 @@ main {
   cursor: pointer;
 }
 
+h1 span {
+  font-size: 0.8em;
+}
+
+figure {
+  border-radius: 0.3rem;
+  background-color: var(--color-blue-light);
+  box-shadow: 2px 3px 5px rgba(0, 0, 0, 0.1);
+  overflow: hidden;
+  margin-top: 1rem;
+}
+
+figcaption {
+  text-align: center;
+  font-weight: bold;
+  padding: 0.5rem;
+}
+
 .c-caption {
   padding: 1rem;
   font-weight: bold;
